<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2015 Volcano. All rights reserved. -->

<resources>

    <string name="app_name">eSecureBox</string>
    <string name="app_url_store">https://play.google.com/store/apps/details?id=</string>

    <string name="alert_delete_account">Are you sure you want to delete account?</string>
    <string name="alert_load_accounts">Your accounts is unavailable\n please check your network connection and tap to try again</string>
    <string name="alert_load_categories">Categories is unavailable\n please check your network connection and tap to try again</string>
    <string name="alert_no_account">No account!\nUse + button to create new one.</string>
    <string name="alert_signout">Are you sure you want to sign out?</string>

    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_close">Close</string>
    <string name="button_del_uppercase">DEL</string>
    <string name="button_delete_uppercase">DELETE</string>
    <string name="button_signin">SIGN IN</string>
    <string name="button_signup">SIGN UP</string>

    <string name="email_subject_bug_report" formatted="false">%s (version %s)</string>
    <string name="email_choose_app_title">Send email via…</string>

    <string name="error_email_invalid">Email is not valid</string>
    <string name="error_email_not_empty">Email can not be empty</string>
    <string name="error_name_not_empty">Name can not be empty</string>
    <string name="error_password_minimum_character">Password must be at least 6 characters</string>
    <string name="error_username_not_empty">Username can not be empty</string>

    <string name="hint_account_name">Enter account title</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_navigation_close">Close</string>
    <string name="hint_navigation_open">Open</string>
    <string name="hint_new_account">New Account</string>
    <string name="hint_password">Password</string>
    <string name="hint_select_sub_category">Select Account Type</string>
    <string name="hint_username">Username</string>

    <string name="label_about_dialog_content_general">A secure and reliable box for save your important information.\nCopyright © 2015 Volcano.</string>
    <string name="label_about_dialog_title">About</string>
    <string name="label_category">Category</string>
    <string name="label_edit_account">Edit Account</string>
    <string name="label_enter_passcode">Enter your passcode</string>
    <string name="label_enter_new_passcode">Enter your new passcode</string>
    <string name="label_enter_old_passcode">Enter your old passcode</string>
    <string name="label_initialize_data">Initializing for first time\n Be patient! It takes less than a minute…</string>
    <string name="label_new_account">New Account</string>
    <string name="label_ninety_nine_plus">99+</string>
    <string name="label_re_enter_passcode">Re-enter your passcode</string>
    <string name="label_re_enter_new_passcode">Re-enter your new passcode</string>
    <string name="label_settings">Settings</string>
    <string name="label_share_choose_app">Share via…</string>
    <string name="label_sign_in">Signin</string>
    <string name="label_sign_up">Signup</string>

    <string name="menu_save">Save</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_signout">Sign Out</string>

    <string name="preference_other_category_title">OTHER</string>
    <string name="preference_other_about_title">About</string>
    <string name="preference_other_report_bug_title">Report a bug</string>
    <string name="preference_other_rate_title">Rate and review</string>
    <string name="preference_other_share_title">Share app</string>
    <string name="preference_passcode_category_title">PASSCODE</string>
    <string name="preference_passcode_change_title">Change passcode</string>
    <string name="preference_passcode_disable_title">Turn passcode off</string>
    <string name="preference_passcode_enable_title">Turn passcode on</string>

    <string name="share_subject">eSecureBox App</string>
    <string name="share_body">\neSecureBox is an awesome app, you can save all of your accounts, login and important information in one safe place. Download it and enjoy!\n\n http://www.eSecureBox.net</string>

    <string name="toast_account_create_failed">Create new account failed</string>
    <string name="toast_account_delete_successful">Account deleted successfully</string>
    <string name="toast_account_delete_failed">Delete account failed</string>
    <string name="toast_account_load_failed">Load account failed</string>
    <string name="toast_account_save_failed">Save account failed</string>
    <string name="toast_account_save_validation">Please fill required information</string>
    <string name="toast_account_update_failed">Update account failed</string>
    <string name="toast_category_for_create_account_unavailable">Creating account is unavailable, please check your network connection and try again</string>
    <string name="toast_device_offline_message">Your device appears to be offline</string>
    <string name="toast_initialize_failed">Initialization failed</string>
    <string name="toast_invalid_username_or_password">Invalid username or password</string>
    <string name="toast_load_category_failed">Load category failed</string>
    <string name="toast_load_email_client_failed">Not found any email app on your device</string>
    <string name="toast_load_share_client_failed">Not found any share app on your device</string>
    <string name="toast_passcode_changed">Passcode changed</string>
    <string name="toast_passcode_disabled">Passcode disabled</string>
    <string name="toast_passcode_enabled">Passcode enabled</string>
    <string name="toast_passcode_invalid">Wrong passcode, please try again</string>
    <string name="toast_passcode_not_matched">The Passcodes didn\'t match, pleas try again</string>
    <string name="toast_report_bug_email_client_unavailable">There are no email clients installed</string>
    <string name="toast_signup_failed">Signup failed</string>

</resources>
