<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_60"
            android:layout_marginBottom="@dimen/margin_25"
            android:layout_gravity="center"
            android:src="@drawable/icon_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_25"
            android:text="@string/label_enter_passcode"
            style="@style/Text.Dark20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/edit_pin_1"
                style="@style/Text.Dark30"
                android:tag="1"/>

            <EditText
                android:id="@+id/edit_pin_2"
                style="@style/Text.Dark30"
                android:tag="2"/>

            <EditText
                android:id="@+id/edit_pin_3"
                style="@style/Text.Dark30"
                android:tag="3"/>

            <EditText
                android:id="@+id/edit_pin_4"
                style="@style/Text.Dark30"
                android:tag="4"/>

        </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                android:tag="1"
                android:text="@string/button_1"
                style="@style/passcode_button"
                />

            <Button
                android:id="@+id/button_2"
                android:tag="2"
                android:text="@string/button_2"
                style="@style/passcode_button"/>

            <Button
                android:id="@+id/button_3"
                android:tag="3"
                android:text="@string/button_3"
                style="@style/passcode_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                android:tag="4"
                android:text="@string/button_4"
                style="@style/passcode_button"/>

            <Button
                android:id="@+id/button_5"
                android:tag="5"
                android:text="@string/button_5"
                style="@style/passcode_button"/>

            <Button
                android:id="@+id/button_6"
                android:tag="6"
                android:text="@string/button_6"
                style="@style/passcode_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                android:tag="7"
                android:text="@string/button_7"
                style="@style/passcode_button"/>

            <Button
                android:id="@+id/button_8"
                android:tag="8"
                android:text="@string/button_8"
                style="@style/passcode_button"/>

            <Button
                android:id="@+id/button_9"
                android:tag="9"
                android:text="@string/button_9"
                style="@style/passcode_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/passcode_button"/>

            <Button
                android:id="@+id/button_0"
                android:tag="0"
                android:text="@string/button_0"
                style="@style/passcode_button"/>

            <Button
                android:id="@+id/button_delete"
                android:text="@string/button_delete"
                style="@style/passcode_button"/>

        </LinearLayout>

        </LinearLayout>

</RelativeLayout>
